maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (aMurNord()==true){
  ^